[package]
name = "sunshine-resolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displayz = "0.1.0"
config = "0.14.0"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4"
fern = "0.6"
humantime = "2.1.0"